front part compeleted

--- a/Client/my-code/public/index.html
+++ b/Client/my-code/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-image:url('https://img.freepik.com/premium-vector/cybersecuri…ervices-business-internet-project_118331-1153.jpg');  background-repeat: no-repeat; background-size: cover; background-attachment: fixed;">
+  <body style="background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('https://img.freepik.com/premium-vector/cybersecuri…ervices-business-internet-project_118331-1153.jpg');  background-repeat: no-repeat; background-size: cover; background-attachment: fixed;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
